--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,7 +10,7 @@ environment:
 
 dependencies:
   collection: ^1.15.0
-  dio: ^4.0.0
+  diox: 5.0.0-dev.3
   http_parser: ^4.0.0
 
 dev_dependencies:
